--- a/stream-two.html
+++ b/stream-two.html
@@ -20,7 +20,7 @@
 
 <nav>
  <ul>
-  <li><a href="stream-one.html">Stream One</a></li>   
+  <li><a href="index.html">Stream One</a></li>   
   <li><a href="stream-two.html">Stream two</a></li>  
   <li><a href="stream-three.html">Stream three</a></li> 
 </ul>   
